--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@electric-sql/pglite": "^0.2.17",
+    "@auth/drizzle-adapter": "^1.9.0",
+    "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -23,12 +28,15 @@
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/react-table": "^8.20.6",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
+    "drizzle-zod": "^0.7.1",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "15.4.0-canary.12",
+    "next-auth": "5.0.0-beta.26",
     "next-themes": "^0.4.4",
     "pg": "^8.15.5",
     "react": "^19.0.0",
